[bug][footer]: fix stupid overflow again

--- a/app/assets/stylesheets/redesign/_footer.css.scss
+++ b/app/assets/stylesheets/redesign/_footer.css.scss
@@ -9,6 +9,14 @@
 		padding-right: 1rem;
 	}
 
+	.row {
+		@media(max-width: 768px){
+			max-width: 100%;
+			margin-left: 0;
+			margin-right: 0;
+		}
+	}
+
 	.footer-navigation {
 		margin-top: 30px;
 		font-size: 1.3rem;
