--- a/app/assets/stylesheets/redesign/_mobile_menu.css.scss
+++ b/app/assets/stylesheets/redesign/_mobile_menu.css.scss
@@ -2,11 +2,11 @@
 .vex-theme-bottom-right-corner.mobile-menu {
 
   .vex-content {
-    border-top:5px solid #000000;        
+    border-top:5px solid #000000;
     background-color:#FFFFFF;
     width:100%;
     height:100%;
-    overflow-y:auto;  
+    overflow-y:auto;
     overflow-x: hidden;
     margin:0;
     padding:0;
@@ -19,7 +19,7 @@
     }
 
     .vex-dialog-message {
-      margin-bottom:70px;    
+      margin-bottom:70px;
     }
 
     .vex-dialog-buttons {
@@ -32,8 +32,14 @@
       .btn {
         padding:10px 15px;
         outline: none;
-      }      
+      }
     }
   }
+}
 
+#mobile-menu {
+  .row {
+    margin-left: 0;
+    margin-right: 0;
+  }
 }
